# sdks

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  RELEASE.md  biome.json  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsdown.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: go-release.yml  node-release.yml  python-release.yml  sdk-checks.yml
docs/: architecture.md  repo-model.md  schema-generation.md
json-schema/: email-received-event.schema.json
openapi/: primitive-api.codegen.json  primitive-api.yaml
scripts/: generate-schema.ts
sdk-go/: README.md  client.go  client_test.go  constants.go  coverage_test.go  doc.go  email_detail_test.go  errors.go  go.mod  go.sum  helpers.go  received_email.go  schema.go  schema_generated.go  send_payloads_test.go  shared_fixtures_test.go  standard_webhooks.go  types.go  validation.go  webhook.go  webhook_test.go
sdk-go/api/: doc.go  helpers.go  oas_cfg_gen.go  oas_client_gen.go  oas_defaults_gen.go  oas_handlers_gen.go  oas_interfaces_gen.go  oas_json_gen.go  oas_operations_gen.go  oas_parameters_gen.go  oas_request_decoders_gen.go  oas_request_encoders_gen.go  oas_response_decoders_gen.go  oas_response_encoders_gen.go  oas_router_gen.go  oas_schemas_gen.go  oas_security_gen.go  oas_server_gen.go  oas_unimplemented_gen.go  oas_validators_gen.go
sdk-go/scripts/: generate_api_client.py  generate_schema_module.py
sdk-node/: .gitignore  README.md  biome.json  openapi-ts.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.oclif.json  tsdown.config.ts  vitest.config.ts
sdk-node/scripts/: fix-generated-api-imports.ts  generate-openapi-artifacts.ts  generate-schema-module.ts  generate-types.ts  generate-validator.ts
sdk-node/src/: index.ts  schema.generated.ts  types.generated.ts  types.ts  validation.ts
sdk-node/src/api/: index.ts
sdk-node/src/contract/: contract.ts
sdk-node/src/oclif/: api-command.ts  (+2 more)
sdk-python/: README.md  pyproject.toml
sdk-python/scripts/: generate_api_client.py  generate_models.py  generate_schema_module.py
sdk-python/src/primitive/: __init__.py  client.py  errors.py  models_generated.py  received_email.py  schema.py  types.py  validation.py  webhook.py
sdk-python/src/primitive/api/: __init__.py  downloads.py
sdk-python/src/primitive/api/api/account/: get_account.py  get_storage_stats.py  get_webhook_secret.py  rotate_webhook_secret.py  update_account.py
sdk-python/src/primitive/api/api/domains/: add_domain.py  delete_domain.py  list_domains.py  update_domain.py  verify_domain.py
sdk-python/src/primitive/api/api/emails/: delete_email.py  download_attachments.py  download_raw_email.py  get_email.py  list_emails.py  replay_email_webhooks.py
sdk-python/src/primitive/api/api/endpoints/: create_endpoint.py  delete_endpoint.py  list_endpoints.py  test_endpoint.py  update_endpoint.py
sdk-python/src/primitive/api/api/filters/: create_filter.py  delete_filter.py  list_filters.py  update_filter.py
sdk-python/src/primitive/api/api/sending/: get_send_permissions.py  reply_to_email.py  send_email.py
sdk-python/src/primitive/api/api/webhook_deliveries/: list_deliveries.py  replay_delivery.py
sdk-python/src/primitive/api/models/: __init__.py  account.py  account_updated.py  add_domain_input.py  add_domain_response_201.py  create_endpoint_input.py  create_endpoint_input_rules.py  create_endpoint_response_201.py  create_filter_input.py  create_filter_input_type.py  create_filter_response_201.py  delete_domain_response_200.py  delete_domain_response_200_data.py  delete_email_response_200.py  delete_email_response_200_data.py  delete_endpoint_response_200.py  delete_endpoint_response_200_data.py  delete_filter_response_200.py  delete_filter_response_200_data.py  delivery_status.py  delivery_summary.py  delivery_summary_email_type_0.py  delivery_summary_status.py  domain_verify_result_type_0.py  domain_verify_result_type_1.py  email_detail.py  email_detail_reply.py  email_detail_status.py  email_detail_webhook_status_type_1.py  email_detail_webhook_status_type_2_type_1.py  email_detail_webhook_status_type_3_type_1.py  email_summary.py  email_summary_status.py  email_summary_webhook_status_type_1.py  email_summary_webhook_status_type_2_type_1.py  email_summary_webhook_status_type_3_type_1.py  endpoint.py  endpoint_rules.py  error_response.py  error_response_error.py  (+63 more)
sdk-python/src/primitive/schemas/: email_received_event.schema.json
sdk-python/src/primitive_sdk/: __init__.py  errors.py  models_generated.py  schema.py  types.py  validation.py  webhook.py
sdk-python/src/primitive_sdk/schemas/: email_received_event.schema.json
sdk-python/tests/: conftest.py  test_auth.py  test_client.py  test_email_detail.py  test_encoding.py  test_helper_parity_matrix.py  test_parsing.py  test_send_payloads.py  test_shared_fixtures.py  test_signing.py  test_signing_parity_matrix.py  test_validation.py  test_webhook.py
src/: contract.ts  index.ts  schema.generated.ts  types.ts  zod.ts
src/parser/: attachment-parser.ts  index.ts  mapping.ts
src/webhook/: auth.ts  errors.ts  index.ts  parsing.ts  signing.ts
test-fixtures/auth/: cases.json
test-fixtures/download-tokens/: vectors.json
test-fixtures/handle-webhook/: cases.json  standard-webhooks-cases.json
test-fixtures/header-address-parser/: cases.json
test-fixtures/parse-webhook-event/: cases.json
test-fixtures/raw/: cases.json
test-fixtures/send-payloads/: cases.json
test-fixtures/signing/: standard-webhooks-vectors.json  vectors.json
test-fixtures/subject-builders/: cases.json
test-fixtures/webhook/: valid-email-received.json  validation-cases.json
tests/parser/: attachment-parser.test.ts  email-parser.test.ts  mapping.test.ts  tar-roundtrip.test.ts
tests/webhook/: auth.test.ts  contract.test.ts  encoding.test.ts  index.test.ts  signing.test.ts  zod.test.ts
(+69 files in other folders)
